2.2.0:

 * Aggregating new data:
   - PO from PR and TA
   - NN_24
   - TA_24
   - UU_24
   